k8s-monitoring/01-prom-op-slo-tutorial/assets/podinfo/service.yaml
---
# Source: podinfo/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  labels:
    app.kubernetes.io/name: podinfo
    app.kubernetes.io/version: "5.1.2"
spec:
  type: ClusterIP
  ports:
    - port: 9898
      targetPort: http
      protocol: TCP
      name: http
    - port: 9999
      targetPort: grpc
      protocol: TCP
      name: grpc
  selector:
    app.kubernetes.io/name: podinfo
