k8s-monitoring/01-prom-op-slo-tutorial/assets/podinfo/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: podinfo
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/name: podinfo
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: podinfo
              servicePort: 9898
